<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EventActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView56"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/event_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/textView56"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/event_name"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_id" />

        <EditText
            android:id="@+id/event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/event_description"
            android:inputType="textMultiLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView54" />

        <TextView
            android:id="@+id/textView59"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="Start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_name" />

        <TextView
            android:id="@+id/textView66"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="Date"
            app:layout_constraintStart_toEndOf="@+id/textView59"
            app:layout_constraintTop_toBottomOf="@+id/event_name" />

        <TextView
            android:id="@+id/start_date"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:hint="@string/start_date_hint"
            android:onClick="showDatePickerDialog"
            app:layout_constraintStart_toEndOf="@+id/textView66"
            app:layout_constraintTop_toBottomOf="@+id/event_name" />

        <TextView
            android:id="@+id/end_date"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:hint="@string/end_date_hint"
            android:onClick="showDatePickerDialog"
            app:layout_constraintStart_toEndOf="@+id/textView65"
            app:layout_constraintTop_toBottomOf="@+id/start_date" />

        <TextView
            android:id="@+id/start_time"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:hint="@string/start_time_hint"
            android:onClick="showTimePickerDialog"
            app:layout_constraintStart_toEndOf="@+id/textView67"
            app:layout_constraintTop_toBottomOf="@+id/event_name" />

        <TextView
            android:id="@+id/end_time"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:hint="@string/end_time_hint"
            android:onClick="showTimePickerDialog"
            app:layout_constraintStart_toEndOf="@+id/textView72"
            app:layout_constraintTop_toBottomOf="@+id/start_time" />

        <TextView
            android:id="@+id/textView67"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="Time"
            app:layout_constraintStart_toEndOf="@+id/start_date"
            app:layout_constraintTop_toBottomOf="@+id/event_name" />

        <TextView
            android:id="@+id/textView72"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="Time"
            app:layout_constraintStart_toEndOf="@+id/end_date"
            app:layout_constraintTop_toBottomOf="@+id/textView67" />

        <TextView
            android:id="@+id/textView65"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="Date"
            app:layout_constraintStart_toEndOf="@+id/textView58"
            app:layout_constraintTop_toBottomOf="@+id/textView66" />

        <TextView
            android:id="@+id/textView58"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="End"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView59" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="254dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/textView54"
            app:layout_constraintTop_toTopOf="@+id/textView54" />

        <TextView
            android:id="@+id/textView54"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="Time zone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView58" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/removeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/delete"
        android:backgroundTint="#FF0000"
        android:onClick="remove" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="save"
        android:text="@string/save_btn"/>


</LinearLayout>